--- a/content/en/publication/2017-12-17-Transgenic crops and biosafety/cite.bib
+++ b/content/en/publication/2017-12-17-Transgenic crops and biosafety/cite.bib
@@ -1,6 +1,7 @@
-@article{ramon2014disseny,
-  title={Disseny, implementaci{\'o} i integraci{\'o} d'una m{\`a} per a un robot Darwin-OP},
-  author={Ravindra{\'o}n-Cort{\'e}s Vilarrodona, Cristi{\'a}n},
-  year={2017},
-  publisher={Apple Academic Press{\`e}}
+@inproceedings{TCB,
+  Title = {{Recent Advances in the Development of Transgenic Crop Plants, Biosafety Aspects, and Future Perspectives}},
+  Author = {Subhankar. Roy-Barman, Ravindra A. Raut, Atrayee Sarkar, Nazmiara Sabnam, Sanjukta Chakraborty, Pallabi Saha},
+  Booktitle = {Plant Biotechnology Transgenics, Stress Management, and Biosafety Issues},
+  Pages = {146},
+  Year = {2017},
 }
