--- a/content/en/publication/2017-12-17-Transgenic crops and biosafety/cite.bib
+++ b/content/en/publication/2017-12-17-Transgenic crops and biosafety/cite.bib
@@ -2,6 +2,6 @@
   Title = {{Recent Advances in the Development of Transgenic Crop Plants, Biosafety Aspects, and Future Perspectives}},
   Author = {Subhankar. Roy-Barman, Ravindra A. Raut, Atrayee Sarkar, Nazmiara Sabnam, Sanjukta Chakraborty, Pallabi Saha},
   Booktitle = {Plant Biotechnology Transgenics, Stress Management, and Biosafety Issues},
-  Pages = {146},
+  Pages = {294-434},
   Year = {2017},
 }
